# openkoutsi-backend

./: .dockerignore  .gitignore  ADMIN.md  AGENTS.md  DEPLOY.md  Dockerfile  README.md  TODO.md  docker-compose.yml  openapi.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-images.yml  ci.yml  deploy-backend.yml
backend/: alembic-registry.ini  alembic-team.ini  alembic-usage.ini  alembic-user.ini  main.py
backend/scripts/: docker-entrypoint.sh  export_openapi.py  migrate_teams.py  migrate_to_per_user.py  migrate_user_dbs.py
inbound_bridge/: Dockerfile  main.py  pyproject.toml
llm-eval/: .gitignore  README.md  _bootstrap.py  promptfooconfig.yaml  selftest.py
llm-eval/asserts/: checks.py
llm-eval/fixtures/: scenarios.py
llm-eval/prompts/: build.py  schemas.py
openkoutsi/: athlete.py  categorization.py  fatigue_metrics.py  fit.py  fit_processing.py  goal.py  plan_adherence.py  plan_builder.py  plan_schema.py  sport_matching.py  training_math.py  workout.py  workout_estimator.py  workout_schema.py  zones.py
openkoutsi/workout_formats/: base.py  fit_debug.py  fit_workout.py  json_export.py  registry.py  wahoo_plan.py  zwift.py
scripts/: deploy-backend.sh  generate_synthetic_fit_fixtures.py  inspect_fit_workout.py  merge_activities.py  strip_fit_location.py
strava_bridge/: .dockerignore  Dockerfile  main.py  pyproject.toml
systemd/: openkoutsi-backend@.service  openkoutsi-bridge@.service  openkoutsi-inbound-bridge@.service  openkoutsi-wahoo-bridge@.service
tests/: conftest.py
wahoo_bridge/: Dockerfile  main.py  pyproject.toml
(+201 files in other folders)
