[project]
name = "openkoutsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitdecode>=0.11.0",
    "fastapi[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "aiosqlite",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
    "pydantic-settings",
    "email-validator",
    "slowapi",
    "cryptography",
    "fit-tool>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:passlib"]

[tool.coverage.run]
omit = [
    "backend/app/db/migrations/env.py",
    "backend/app/db/migrations/registry/env.py",
    "backend/app/db/migrations/team/env.py",
    "strava_bridge/main.py",
]
